# ecslang-flecs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  nim.cfg
examples/swift/: README.md  module_simple.swift
test/: CMakeLists.txt  defer.h  ecs.cpp  qjs.cpp
test/memxor/: README.md  build.zig  cache_info.cpp  cpu_info.cpp
test/module/: CMakeLists.txt  explorer.cpp  simple.h  test.cpp
test/module/cpp/: CMakeLists.txt  simple.cpp  simple.h
